gestion des notifications

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20100,7 +20100,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
 .photo-content {
   position: relative; }
   .photo-content .cover-photo {
-    background: url(../images/profile/cover.jpg);
+    background: url(../images/labo.jpg);
     background-size: cover;
     background-position: center;
     min-height: 17rem;
