--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,58 +1,4 @@
-/*
-    Table of Contents
 
-    Name                 : Dompet
-    Author               : Dexignlabs
-    Author Portfolio     : https://themeforest.net/user/dexignlabs/portfolio
-    
-
-
-    Table of Sass Contents
-
-    1. Abstracts
-        _bs-custom
-        _inheritance
-        _maps
-        _mixin
-        _variable
-
-    2. bootstrap 
-        -Here goes all official bootstrap scss files
-
-    3. Global/Base
-        _color
-        _custom-grid
-        _fonts
-        _helper
-        _reset
-
-    4. layout
-        +footer
-        +header
-        +rtl
-        +sidebar
-        +tables
-        +theme
-        +version-dark
-
-    5. Conponents
-        +app
-        +charts
-        +forms
-        +map
-        +uc
-        +ui
-        +widget
-
-    6. Page
-        _index-1
-        _page-error
-        _page-register
-        _page-signin
-        _page-user-lock
-        _page-user-lock
-
-*/
 @import url("../../css2");
 @import url("../../css");
 @import url("../../css-1");
@@ -12373,6 +12319,7 @@ The smaller device rules always should write below the bigger device rules
 Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Component
 */
 [data-sidebar-style="full"][data-layout="vertical"] .dlabnav .metismenu > li {
+  color: white;
   padding: 0 30px; }
   [data-sidebar-style="full"][data-layout="vertical"] .dlabnav .metismenu > li > a {
     font-size: 18px;
@@ -12382,12 +12329,13 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
     -ms-transition: all 0.5s;
     transition: all 0.5s; }
   [data-sidebar-style="full"][data-layout="vertical"] .dlabnav .metismenu > li.mm-active > a i {
-    color: var(--primary);
+    color: white;
     font-weight: 300; }
   [data-sidebar-style="full"][data-layout="vertical"] .dlabnav .metismenu > li .has-arrow:after {
     right: 1.5rem; }
   @media only screen and (max-width: 1400px) {
     [data-sidebar-style="full"][data-layout="vertical"] .dlabnav .metismenu > li {
+      
       padding: 0 15px; }
       [data-sidebar-style="full"][data-layout="vertical"] .dlabnav .metismenu > li > a {
         font-size: 16px;
@@ -13590,6 +13538,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
   border-bottom-right-radius: 1.25rem; }
   [data-sidebar-position="fixed"][data-layout="vertical"] .dlabnav .dlabnav-scroll {
     border-top-left-radius: 0px;
+    border-radius: 0px;
     border-top-right-radius: 0px; }
 
 [data-sidebar-position="fixed"][data-layout="vertical"] .menu-toggle .dlabnav {
@@ -24001,7 +23950,7 @@ button {
   position: relative;
   border: 0px solid transparent;
   border-radius: 1.75rem;
-  box-shadow: 0px 5px 5px 0px rgba(82, 63, 105, 0.05);
+  box-shadow: 0px 5px 20px 0px rgba(82, 63, 105, 0.05);
   height: calc(100% - 30px); }
   @media only screen and (max-width: 575px) {
     .card {
